Fix different length transcriptions causing jumping of the main canvas; make transcription placeholder text more meaningful

--- a/style.css
+++ b/style.css
@@ -318,3 +318,10 @@ select {
 #timeline  {
   height: 50%;
 }
+
+#metadata-fragment {
+    overflow: auto;
+    width: 20em;
+    height: 6em;
+}
+
